@@ -331,27 +331,25 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.16</version>
             <configuration>
-                <excludes>
-                    <exclude>**/*IntegrationTest.java</exclude>
-                </excludes>
-                <argLine>-Dfile.encoding=UTF-8</argLine>
-                <forkCount>1</forkCount>
+                <argLine>-Dfile.encoding=UTF-8  -Xmx512M -XX:MaxPermSize=128M</argLine>
+                <forkCount>4</forkCount>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.zeroturnaround</groupId>
+            <artifactId>jrebel-maven-plugin</artifactId>
+            <version>1.1.5</version>
+            <configuration>
+                <addResourcesDirToRebelXml>false</addResourcesDirToRebelXml>
+                <alwaysGenerate>true</alwaysGenerate>
             </configuration>
             <executions>
                 <execution>
-                    <id>integration-test</id>
+                    <id>generate-rebel-xml</id>
+                    <phase>process-resources</phase>
                     <goals>
-                        <goal>test</goal>
+                        <goal>generate</goal>
                     </goals>
-                    <phase>integration-test</phase>
-                    <configuration>
-                        <excludes>
-                            <exclude>none</exclude>
-                        </excludes>
-                        <includes>
-                            <include>**/*IntegrationTest.java</include>
-                        </includes>
-                    </configuration>
                 </execution>
             </executions>
         </plugin>
@@ -557,7 +555,7 @@
       <dependency>
         <groupId>xerces</groupId>
         <artifactId>xercesImpl</artifactId>
-        <version>2.7.1</version>
+        <version>2.11.0</version>
       </dependency>
 			<!-- Patched XML Resolver 1.2 from apache xml-commons - fixes problems
 			     with windows URLs -->
@@ -910,16 +908,6 @@
         <version>${spring.version}</version>
       </dependency>
       <dependency>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-aop</artifactId>
-          <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-            <groupId>aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-            <version>1.5.2</version>
-      </dependency>
-      <dependency>
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-core</artifactId>
         <version>${spring.security.version}</version>
@@ -1023,6 +1011,12 @@
       <!-- The version number is specified above. -->
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>com.google.jimfs</groupId>
+          <artifactId>jimfs</artifactId>
+          <version>1.0</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <!-- ================================================================== -->
@@ -1098,7 +1092,6 @@
   <modules>
     <module>common</module>
     <module>cachingxslt</module>
-    <module>jeeves</module>
     <module>sde</module>
     <module>web-ui</module>
     <module>web-ui-docs</module>
@@ -1167,7 +1160,7 @@
     <maven.build.timestamp.format>yyyy-MM-dd'T'HH'\:'mm'\:'ssZ</maven.build.timestamp.format>
     <build.timestamp>${maven.build.timestamp}</build.timestamp>
     <rootProjectDir>..</rootProjectDir>
-    <wro.version>1.7.1</wro.version>
+    <wro.version>1.7.7</wro.version>
     <node.version>v0.10.24</node.version>
     <npm.version>1.3.23</npm.version>
     <print-lib.version>2.0.0</print-lib.version>
